--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <div class="hero">
         <nav>
-            <img src="/farhan/logo.png" class="logo">
+            <img src="/logo.png" class="logo">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Recipe</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
-            <img src="/farhan/menu.png" class="menu-img">
+            <img src="/menu.png" class="menu-img">
         </nav>
         <div class="row">
             <div class="col">
@@ -24,8 +24,8 @@
                 <a href="#">Order Now</a>
             </div>
             <div class="col">
-                <img src="/farhan/pic1.png" class="feature-img">
-                <img src="/farhan/pic2.png" class="thumbnail-img">
+                <img src="/pic1.png" class="feature-img">
+                <img src="/pic2.png" class="thumbnail-img">
             </div>
         </div>
     </div>
